[package]
name = "github-tree-print"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "github-tree-print"
path = "src/main.rs"


[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
